learned some more properties

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-.cont{
+    .cont{
         height: 540px;
         width: 350px;
         display: flex;
-    flex-direction: column;
-    justify-content: space-between; 
-    align-items: center;
-
+        flex-direction: column;
+        justify-content: space-between; 
+        align-items: center;
     }
     
     .flex{
@@ -38,6 +37,8 @@
         display: flex;
         height: 300px;
         width: 300px;
+        resize: both;
+        overflow: auto;
     }
     .container2{
         height: 200px;
@@ -56,5 +57,22 @@
     .flex5{
         flex-direction: column-reverse;
         gap: 10px;
+        justify-content: center;
+    }
+    .flex6{
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+    }
+    .flex7{
+        display: flex;
+        gap: 10px;
+        justify-content: space-around;
+    }
+    .flex8{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        align-content: center;
         justify-content: center;
     }
